# agentic-swarm-bench

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  demo.tape  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  publish-oss.yml
agentic_coding_bench/: __init__.py  __main__.py  cli.py  config.py
agentic_coding_bench/metrics/: collector.py  stats.py
agentic_coding_bench/proxy/: padding.py  server.py  translators.py
agentic_coding_bench/report/: markdown.py
agentic_coding_bench/runner/: claude_code.py  direct.py  eval_runner.py
agentic_coding_bench/tasks/: tasks.json
agentic_coding_bench/tasks/context/: codebase_context.py
agentic_coding_bench/workloads/: __init__.py  player.py  recorder.py  registry.py
agentic_swarm_bench/: __init__.py  __main__.py  cli.py  config.py  modules.py
agentic_swarm_bench/metrics/: collector.py  stats.py
agentic_swarm_bench/proxy/: context.py  padding.py  server.py  translators.py  utils.py
agentic_swarm_bench/report/: markdown.py
agentic_swarm_bench/runner/: claude_code.py  direct.py  eval_runner.py
agentic_swarm_bench/scenarios/: __init__.py  evaluator.py  player.py  poison.py  recorder.py  registry.py  schedule.py
agentic_swarm_bench/scenarios/data/cpp-builds-claude-opus-4.6/: cpp-build-firefox.jsonl  scenario.json
agentic_swarm_bench/scenarios/data/cpp-builds-gemma-4-31b/: cpp-build-firefox.jsonl  cpp-llvm-then-firefox.jsonl  cpp-vllm-docker-125m.jsonl  scenario.json
agentic_swarm_bench/scenarios/data/js-coding-opus/: build-rest-api.jsonl  csv-parser-cli.jsonl  markdown-renderer.jsonl  scenario.json  state-machine.jsonl
agentic_swarm_bench/scenarios/data/markdown-note-app/: scenario.json
agentic_swarm_bench/scenarios/data/trivial-qa/: binary-to-decimal.jsonl  boiling-point.jsonl  capital-of-france.jsonl  largest-planet.jsonl  scenario.json  speed-of-light.jsonl
agentic_swarm_bench/tasks/: registry.py
agentic_swarm_bench/tasks/context/: codebase_context.py
agentic_swarm_bench/workloads/: __init__.py  player.py  recorder.py  registry.py
docs/: SCHEDULING.md
examples/: compare_endpoints.sh  docker_run.sh  full_suite.sh  quick_start.sh
modules/asb_cache_defeat/: pyproject.toml
modules/asb_cache_defeat/src/asb_cache_defeat/: __init__.py  live_poison.py  padding_poison.py
modules/asb_cache_defeat/tests/: test_cache_defeat.py
modules/asb_scheduler/: pyproject.toml
modules/asb_scheduler/src/asb_scheduler/: __init__.py  interleaved.py  random_policy.py
modules/asb_scheduler/tests/: test_scheduler.py
recordings/: markdown-note-app.jsonl
skill/: SKILL.md
tests/: conftest.py  markers.py  test_bug_fixes.py  test_cli.py  test_config.py  test_context.py  test_direct_runner.py  test_e2e.py  test_early_abort.py  test_eval_runner.py  test_evaluate_parsing.py  test_evaluator.py  test_live_history.py  test_metrics.py  test_player.py  test_proxy.py  test_proxy_server.py  test_recorder.py  test_report.py  test_scenarios.py  test_tasks.py  test_tier3_agent_runner.py  test_tier3_direct_orchestration.py  test_tier3_replay_orchestration.py  test_workloads.py
tools/: build_oss.py
