[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "asb-cache-defeat"
version = "0.1.0"
description = "Cache defeat module for AgenticSwarmBench (private)"
requires-python = ">=3.10"
dependencies = ["agentic-swarm-bench>=3.4.3"]

[project.entry-points."asb.modules"]
cache_defeat = "asb_cache_defeat:CacheDefeatModule"

[tool.hatch.build.targets.wheel]
packages = ["src/asb_cache_defeat"]
